--- a/index.html
+++ b/index.html
@@ -7,5 +7,20 @@
     <link rel="stylesheet" href="./style.css" />
     <meta name="description" content="Site com informações dos animais." />
   </head>
-  <body></body>
+  <body>
+    <div class="estrutura">
+      <header class="header">
+        <a href="#" class="logo"
+          ><img src="./img/wildbeast.svg" alt="WildBeast - Logo"
+        /></a>
+        <nav>
+          <ul>
+            <li><a href="#">Sobre</a></li>
+            <li><a href="#">Animais</a></li>
+            <li><a href="#">Contato</a></li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+  </body>
 </html>
