--- a/index.html
+++ b/index.html
@@ -21,6 +21,29 @@
           </ul>
         </nav>
       </header>
+
+      <nav class="sidenav">
+        <ul>
+          <li>
+            <a href="#"><img src="./img/icones/cervo.svg" alt="Cervo" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./img/icones/leao.svg" alt="Leão" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./img/icones/gato.svg" alt="Gato" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./img/icones/vaca.svg" alt="Vaca" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./img/icones/ovelha.svg" alt="Ovelha" /></a>
+          </li>
+          <li>
+            <a href="#"><img src="./img/icones/abelha.svg" alt="Abelha" /></a>
+          </li>
+        </ul>
+      </nav>
     </div>
   </body>
 </html>
