--- a/index.html
+++ b/index.html
@@ -44,6 +44,80 @@
           </li>
         </ul>
       </nav>
+
+      <main class="content">
+        <div class="titulo">
+          <h1>Lobo Cinza</h1>
+          <span>da família canis lupus</span>
+        </div>
+
+        <div class="caracteristicas">
+          <div>
+            <span class="numero">72</span>
+            <span class="rotulo">kg</span>
+          </div>
+          <div>
+            <span class="numero">13</span>
+            <span class="rotulo">age</span>
+          </div>
+        </div>
+
+        <p>
+          O lobo cinza é um sobrevivente da Era do Gelo, originário do
+          Pleistoceno Superior, cerca de 300 mil anos atrás. Sua história
+          remonta a eras pré-históricas, destacando-se como um exemplo de
+          resiliência no reino animal.
+        </p>
+
+        <img src="./img//wolf1.jpg" alt="Wolf 1" />
+
+        <p>
+          O lobo cinza possui mandíbulas poderosas, unhas afiadas e densa
+          pelagem, o que o torna um predador eficiente e adaptado a diversas
+          paisagens.
+        </p>
+
+        <img src="./img/wolf2.jpg" alt="Wolf 2" />
+
+        <p>
+          A alcateia é a estrutura social essencial dos lobos cinzas, revelando
+          um notável companheirismo e cooperação entre eles. Liderada pelo casal
+          alfa, geralmente o macho e a fêmea dominantes, eles guiam o grupo,
+          composto por lobos adultos, jovens e filhotes.
+        </p>
+
+        <blockquote class="citação">
+          <p>
+            “Há algo no uivar do lobo que tira um homem do aqui e agora e o
+            transporta para uma floresta da mente.”
+          </p>
+          <cite>George R. R. Martin</cite>
+        </blockquote>
+
+        <ul class="atributos">
+          <li>Surgiu: 12.000 anos</li>
+          <li>Tipo: Mamífero</li>
+          <li>Idade Média: 13 anos</li>
+          <li>Macho Adulto: 80kg</li>
+          <li>Fêmea Adulta: 55kg</li>
+          <li>Família: Lupus</li>
+        </ul>
+
+        <div class="informacoes">
+          <p>
+            Os lobos são animais inteligentes e estratégicos em suas caçadas,
+            com habilidades de comunicação e colaboração impressionantes.
+          </p>
+          <p>
+            Ao longo da história, os lobos têm sido temidos e reverenciados em
+            várias culturas, sendo considerados símbolos poderosos e guardiões
+            espirituais. A conservação desses animais é essencial para preservar
+            a diversidade da vida selvagem.
+          </p>
+        </div>
+
+        <img src="./img/wolf3.jpg" alt="Wolf 3" />
+      </main>
     </div>
   </body>
 </html>
