--- a/index.html
+++ b/index.html
@@ -118,6 +118,15 @@
 
         <img src="./img/wolf3.jpg" alt="Wolf 3" />
       </main>
+
+      <aside class="anuncios">
+        <div class="anuncio-item">
+          <img src="./img/anuncio-1.jpg" alt="Anúncio 1" />
+        </div>
+        <div class="anuncio-item">
+          <img src="./img/anuncio-2.jpg" alt="Anúncio 2" />
+        </div>
+      </aside>
     </div>
   </body>
 </html>
