--- a/index.html
+++ b/index.html
@@ -127,6 +127,18 @@
           <img src="./img/anuncio-2.jpg" alt="Anúncio 2" />
         </div>
       </aside>
+
+      <footer class="footer">
+        <p>
+          <a
+            href="https://github.com/rochamaatheus"
+            target="_blank"
+            rel="external"
+            >rochamaatheus</a
+          >
+          &copy; 2023. Alguns direitos reservados.
+        </p>
+      </footer>
     </div>
   </body>
 </html>
