col-2 & estrutura-content inicial

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </div>
         </div>
 
-        <p>
+        <p class="col-2">
           O lobo cinza é um sobrevivente da Era do Gelo, originário do
           Pleistoceno Superior, cerca de 300 mil anos atrás. Sua história
           remonta a eras pré-históricas, destacando-se como um exemplo de
@@ -83,7 +83,7 @@
           paisagens.
         </p>
 
-        <img src="./img/wolf2.jpg" alt="Wolf 2" />
+        <img class="col-2" src="./img/wolf2.jpg" alt="Wolf 2" />
 
         <p>
           A alcateia é a estrutura social essencial dos lobos cinzas, revelando
@@ -92,7 +92,7 @@
           composto por lobos adultos, jovens e filhotes.
         </p>
 
-        <blockquote class="citação">
+        <blockquote class="citação col-2">
           <p>
             “Há algo no uivar do lobo que tira um homem do aqui e agora e o
             transporta para uma floresta da mente.”
