Correção e adição de classes

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           resiliência no reino animal.
         </p>
 
-        <img src="./img//wolf1.jpg" alt="Wolf 1" />
+        <img class="imagem-1" src="./img//wolf1.jpg" alt="Wolf 1" />
 
         <p>
           O lobo cinza possui mandíbulas poderosas, unhas afiadas e densa
@@ -83,7 +83,7 @@
           paisagens.
         </p>
 
-        <img class="col-2" src="./img/wolf2.jpg" alt="Wolf 2" />
+        <img class="imagem-2" src="./img/wolf2.jpg" alt="Wolf 2" />
 
         <p>
           A alcateia é a estrutura social essencial dos lobos cinzas, revelando
@@ -122,7 +122,7 @@
           </p>
         </div>
 
-        <img src="./img/wolf3.jpg" alt="Wolf 3" />
+        <img class="col-2" src="./img/wolf3.jpg" alt="Wolf 3" />
       </main>
 
       <aside class="anuncios">
