Citação, atributos & footer

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
         <img class="imagem-1" src="./img//wolf1.jpg" alt="Wolf 1" />
 
-        <p>
+        <p class="destaque">
           O lobo cinza possui mandíbulas poderosas, unhas afiadas e densa
           pelagem, o que o torna um predador eficiente e adaptado a diversas
           paisagens.
@@ -87,12 +87,15 @@
 
         <p>
           A alcateia é a estrutura social essencial dos lobos cinzas, revelando
-          um notável companheirismo e cooperação entre eles. Liderada pelo casal
-          alfa, geralmente o macho e a fêmea dominantes, eles guiam o grupo,
-          composto por lobos adultos, jovens e filhotes.
+          um notável companheirismo e cooperação entre eles.
         </p>
 
-        <blockquote class="citação col-2">
+        <p>
+          Liderada pelo casal alfa, geralmente o macho e a fêmea dominantes,
+          eles guiam o grupo, composto por lobos adultos, jovens e filhotes.
+        </p>
+
+        <blockquote class="citacao col-2">
           <p>
             “Há algo no uivar do lobo que tira um homem do aqui e agora e o
             transporta para uma floresta da mente.”
